# VAMOS-for-precision-oncology

./: CONTRIBUTING.md  README.md  VAMOS_precision_oncology.yml  config.yaml  pyproject.toml  requirements.txt  setup.py
examples/: quickstart.ipynb  toy_expression.csv  toy_variants.csv
tests/: test_imports.py
vamos_precision/: __init__.py  cli.py  clustering.py  config.py  drug_id.py  gsea.py  logodds.py  mapping.py  ml.py  permutation.py  prioritization.py  utils.py
vamos_precision/r/: GSEA_final.R
